<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/widget_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/widget_title_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:src="@drawable/widget_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/state_widget_description"
            android:layout_marginStart="8dp"
            android:textColor="@color/app_widget_title"
            android:textSize="13sp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView
            android:id="@+id/state_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:columnWidth="75dp"
            android:stretchMode="spacingWidth"
            android:numColumns="auto_fit"
            tools:listitem="@layout/state_widget_item"/>

        <LinearLayout
            android:id="@+id/empty_state_list_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/app_widget_title"
                android:text="@string/hint_state_list_is_empty"/>

            <TextView
                android:id="@+id/bt_launch_app"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/widget_empty_button_background"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/to_add"
                android:textColor="@color/app_widget_title"
                android:textSize="13sp" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>